[project]
name = "hensel"
version = "0.1.0"
description = """\
    Pure-Python implementation of Hensel lifting for square \
    roots modulo a prime power.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "egcd~=0.5"
]

[project.urls]
Repository = "https://github.com/lapets/hensel"

[project.optional-dependencies]
test = [
    "pytest~=7.4",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=hensel --cov-report term-missing"
